container screen overflow fix iphone

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -144,6 +144,7 @@
 			font-size: 42px
 		.container
 			margin: 0
+			width: 100%
 			header
 				h2
 					width: 40%
